[tool.poetry]
name = "triage_nn"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"
numpy = "^1.22.3"
Cython = "^0.29.28"
SQLAlchemy = "^1.4.32"
"testing.postgresql" = "^1.3.0"
mock = "^4.0.3"
PyYAML = "^6.0"
coloredlogs = "^15.0.1"
wrapt = "^1.14.0"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
