[tool.poetry]
name = "triage_nn"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
pandas = "^1.4.1"
numpy = "^1.22.3"
Cython = "^0.29.28"
SQLAlchemy = "1.3.18"
"testing.postgresql" = "^1.3.0"
mock = "^4.0.3"
PyYAML = "^6.0"
coloredlogs = "^15.0.1"
wrapt = "^1.14.0"
psycopg2 = "^2.9.3"
verboselogs = "^1.7"
matplotlib = "^3.5.1"
sklearn = "^0.0"
alembic = "^1.7.7"
requests = "^2.27.1"
django-postgres-copy = "^2.7.0"
retrying = "^1.3.3"
Django = "^4.0.4"
s3fs = "0.4.2"
Dickens = "^1.0.1"
ipykernel = "^6.13.0"
jupyter = "^1.0.0"
notebook = "^6.4.11"
signalled-timeout = "1.0.0"
sqlparse = "^0.4.2"
argcmdr = "^0.7.0"
inflection = "^0.5.1"
click = "^8.1.3"
boto3 = "1.14.45"
python-dateutil = "2.8.1"
adjustText = "0.7.3"
Pebble = "4.5.3"
skorch = "^0.11.0"
torch = "^1.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
